<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp"
        android:drawableLeft="@drawable/selection_rectangular"
        android:drawablePadding="10dp"
        android:gravity="bottom"
        android:text="@string/alpha_layer"
        android:textColor="#000000" />

    <SeekBar
        android:id="@+id/seek_alphr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="255"
        android:maxHeight="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:progress="255"
        android:progressDrawable="@drawable/seekbar"
        android:thumb="@drawable/btn_circle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp"
        android:drawableLeft="@drawable/osi_model2"
        android:drawablePadding="10dp"
        android:text="@string/blend_mode"
        android:textColor="#000000" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/SpinnerItems" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_medium" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/list_item"
            android:clickable="true"
            android:drawableBottom="@drawable/add"
            android:gravity="center"
            android:onClick="onAddLayer"
            android:text="@string/add_layer"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/list_item"
            android:clickable="true"
            android:drawableBottom="@drawable/eye_open"
            android:gravity="center"
            android:onClick="onVisibility"
            android:text="@string/visibility"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/list_item"
            android:clickable="true"
            android:drawableBottom="@drawable/trash_can"
            android:gravity="center"
            android:onClick="ondeleteLayer"
            android:text="@string/delete_layer"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>